Fix pinned post and margins on mobile

--- a/_sass/base/_helpers.scss
+++ b/_sass/base/_helpers.scss
@@ -12,3 +12,12 @@
   font-size: 24px;
   font-weight: 400;
 }
+
+@media screen and (max-width: 800px) {
+  .wrapper {
+    max-width: -webkit-calc(800px - (30px));
+    max-width: calc(800px - (30px));
+    padding-right: 15px;
+    padding-left: 15px;
+  }
+}
